--- a/Homework 7/mainstyle.css
+++ b/Homework 7/mainstyle.css
@@ -1,9 +1,8 @@
 span {
-    color:white;
-    font-weight: 100;
-    background-color: darkblue;
+    font-weight: 200;
 }
-.Titlepage{
-    color:
+.lessimportantstuff{
+    color:gray;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
 }
