--- a/Homework 7/mainstyle.css
+++ b/Homework 7/mainstyle.css
@@ -3,6 +3,5 @@ span {
 }
 .lessimportantstuff{
     color:gray;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-
+    font: Arial;
 }
